:sparkles: feat: Adiçao de Jwt